--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,8 @@ lib_deps =
 	adafruit/Adafruit BNO055@^1.6.1
 	jgromes/RadioLib@^5.5.0
 	SPI
+	SD
+	SdFat
 	adafruit/Adafruit BMP280 Library@^2.6.6
 	sandeepmistry/LoRa@^0.8.0
 	adafruit/Adafruit GPS Library@^1.7.2
