GPS now works, need to sort out delay/time with GPS and other components

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,10 @@ board = teensy41
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit BNO055@^1.6.1
-	jgromes/RadioLib@^5.5.0
+	; jgromes/RadioLib@^5.5.0
 	SPI
-	SD
-	SdFat
+	; SD
+	; SdFat
 	adafruit/Adafruit BMP280 Library@^2.6.6
 	sandeepmistry/LoRa@^0.8.0
 	adafruit/Adafruit GPS Library@^1.7.2
