--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,11 @@ platform = teensy
 board = teensy41
 framework = arduino
 build_flags = -D TEENSY_OPT_DEBUG
-; monitor_echo = yes
-; monitor_eol = LF
-; monitor_filters =
-;    colorize
-;    time
+monitor_echo = yes
+monitor_eol = LF
+monitor_filters =
+   colorize
+   time
 lib_deps = 
 	adafruit/Adafruit BNO055@^1.6.1
 	SPI
